# game_2048

./: pyproject.toml  run_test.py
game_2048/agent/: __init__.py  baseline.py  dql.py  mcts.py  random_agent.py  random_bottom_agent.py  training.py
game_2048/agent/alpha_zero/: MCTS.py  MCTSAgent.py  NaiveAgent.py  NeuralNet.py  State.py  ___init__.py  training.py
game_2048/agent/linear/: LinearRegressionAgent.py
game_2048/env/: __init__.py  env.py
game_2048/models/: CNN_2048.pt  ConvNet.pt  MCTS_CNN_2048.pt  dataset.pkl  overview_training.txt  warmed_up_model.pt
game_2048/utils/: __init__.py  functions.py  progress_bar.py
notebooks/: DQL.ipynb  DeepMCTS.ipynb  NaiveMCTSAgent.ipynb  mcts_simple.ipynb  random_agent.ipynb  random_bottom_agent.ipynb
tests/: __init__.py  deepMCTS.py  dql.py  env.py  player.py
